--- a/templates/notallow.html
+++ b/templates/notallow.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="error-container text-center">
-        <div class="error-code">😂你没有使用权限</div>
+        <div class="error-code">⚠️你没有使用权限</div>
     </div>
 </body>
 </html>
