--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
                             <input type="password" class="password" name="password" placeholder="User Password" required="", value="{{password}}",>
                             <button class="btn" type="submit">Log In</button>
                         </form>
+                        <button class="getAllowance btn btn-warning" type="submit" onclick="checkAdmission()" data-bs-toggle="tooltip" data-bs-placement="right" title="Enter Your ID and Key.">
+                            Get Admission</button>
+                        <div id="alert-container" style="position: fixed; top: 20%; left: 50%; transform: translateX(-50%); z-index: 9999;"></div>
                         <p id="GetTime"></p>
                     </div>
                     <div class="w3l_form align-self">
@@ -45,6 +48,13 @@
         }, 1000);
         }
     </script>
+    <script src={{url_for('static', filename='js/load_credits.js')}}></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        tooltipTriggerList.forEach(tooltip => {
+            new bootstrap.Tooltip(tooltip)
+        })
+    </script>
 </body>
 </html>
