--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
         }, 1000);
         }
     </script>
-    <script src={{url_for('static', filename='js/load_credits.js')}}></script>
+    <script src="{{url_for('static', filename='js/load_credits.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script>
         const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
