--- a/templates/process.html
+++ b/templates/process.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://img.icons8.com/?size=100&id=70yRC8npwT3d&format=png&color=000000">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/font-awesome.min.css')}}" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>成绩表</title>
     <style>
@@ -137,9 +138,15 @@
                 {% endfor %}
             </tbody>
         </table>
-            <button onclick="loadCredits()" class="load-btn credits">📘 加载绩点</button>
+            <button onclick="loadCredits()" class="load-btn credits target-section">📘 加载绩点</button>
                 <div id="credits-area"></div>
     </div>
+    <button
+        class="btn btn-primary shadow"
+        style="position: fixed; bottom: 5%; right: 3%; z-index: 1000; width:40px; height: 40px;"
+        onclick="scrollToSection()"
+    ><i class="fa fa-arrow-down"></i></button>
+
     <script src="{{ url_for('static', filename='js/load_credits.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
