--- a/templates/process.html
+++ b/templates/process.html
@@ -138,8 +138,8 @@
                 {% endfor %}
             </tbody>
         </table>
-            <button onclick="loadCredits()" class="load-btn credits target-section">📘 加载绩点</button>
-                <div id="credits-area"></div>
+            <button onclick="loadCredits()" class="load-btn credits">📘 加载绩点</button>
+                <div id="credits-area" class="target-section"></div>
     </div>
     <button
         class="btn btn-primary shadow"
