--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <title>URP SOLUTION</title>
+    <title>ZiJin URP</title>
     <link rel="icon" href="https://img.icons8.com/?size=100&id=XhIm44CcXKqm&format=png&color=000000">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
