--- a/templates/notallow.html
+++ b/templates/notallow.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>错误提示页</title>
+    <title>notallow</title>
     <!-- 引入 Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="https://img.icons8.com/?size=100&id=63688&format=png&color=000000">
