--- a/templates/process.html
+++ b/templates/process.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://img.icons8.com/?size=100&id=70yRC8npwT3d&format=png&color=000000">
+    <link rel="icon" href="https://img.icons8.com/?size=100&id=xTkoPEFGI0P7&format=png&color=000000">
     <link rel="stylesheet" href="{{url_for('static', filename='css/font-awesome.min.css')}}" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>ZiJin URP Solution</title>
