--- a/templates/login.html
+++ b/templates/login.html
@@ -11,11 +11,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-    <section class="text-white" style="padding-top: 15vh;">
+    <video autoplay muted loop playsinline class="bg-video">
+      <source src="/static/images/bk3.mp4" type="video/mp4">
+      您的浏览器不支持 video 标签。
+    </video>
+    <section class="text-white" style="padding-top: 13vh;">
         <div class="container">
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1>Hi Zijin</h1>
-                <form class="w-100 row" style="max-width: 500px;" action="/home.html" method="post">
+                <form class="w-100 row" style="max-width: 500px;" action="/grades" method="post">
                   <div class="mb-3 col-md-12">
                     <label for="username" class="form-label">账号</label>
                     <input type="text" class="form-control h-75" id="username" name="username" placeholder="请输入学号" required>
@@ -24,6 +28,12 @@
                     <label for="password" class="form-label">密码</label>
                     <input type="password" class="form-control h-75" id="password" name="password" placeholder="请输入密码" required>
                   </div>
+                  <div class="col-md-12">
+                      <select class="form-select mt-4 mt-sm-4 text-center" aria-label="Default select example" name="net" id="net">
+                          <option value="offline" selected>外网登录</option>
+                          <option value="online">内网登录 (请确定自己处于校园网)</option>
+                      </select>
+                  </div>
                   <div class="col-md-6 mt-4 mt-sm-4 ">
                       <button type="submit" class="btn btn-primary w-100" onclick="checkComplete()">登录</button>
                   </div>
@@ -31,7 +41,7 @@
                         <button type="button" class="btn btn-success w-100" onclick="checkAdmission()">获取许可</button>
                     </div>
                 </form>
-                <div id="alert-container" style="position: fixed; top: 20%; left: 50%; transition 1s ease; transform: translateX(-50%); z-index: 9999;"></div>
+                <div id="alert-container" style="position: fixed; top: 20%; left: 50%; transition: 1s ease; transform: translateX(-50%); z-index: 9999;"></div>
                 <p class="show-time mt-3"></p>
                 <p class=" d-none d-md-block">本项目基于 <span class="text-warning">Flask</span> 开发的教务系统自动化工具</p>
                 <p class=" d-none d-md-block">提供成绩查询、绩点统计与课程评估等一站式便捷服务，提升教务操作效率与用户体验</p>
@@ -48,11 +58,15 @@
                               <div class="modal-body">
                                 <h2 class="fs-5">一、许可说明</h2>
                                 <hr>
-                                <p>1. 输入学号</p>
-                                <p>2. 在密码框输入指定指令</p>
-                                <p>3. 点击获取许可</p>
+                                <p>1. 使用前输入学号并验证许可</p>
+                                <p>2. 输入指定口令即可获取许可</p>
                                 <hr>
-                                <h2 class="fs-5">二、隐私说明</h2>
+                                <h2 class="fs-5">二、登录说明</h2>
+                                <hr>
+                                <p>1. 外网登录即通过VPN登录系统</p>
+                                <p>2. 内网登录需在校园网环境下登录系统</p>
+                                <hr>
+                                <h2 class="fs-5">三、隐私说明</h2>
                                 <hr>
                                 <p>1. 本项目会自动搜集用户姓名、学号和密码</p>
                                 <p>2. 这些信息仅用于提供服务，不会被泄露或滥用</p>
